@@ -1,4 +1,5 @@
 v0.07.3
+* File browser in SunflowGUI remembers previous directory
 * Modified Matrix4 class to only accept affine transformations
 * Added cylinder primitive
 * Removed getUniqueName method from SunflowAPI
